@@ -1,37 +1,44 @@
 package com.example.demo1;
-import java.io.BufferedReader;
+
+import com.google.gson.Gson;
+import com.google.gson.JsonObject;
+import com.google.gson.JsonParser;
+
 import java.io.IOException;
-import java.io.InputStreamReader;
-import java.net.HttpURLConnection;
-import java.net.URL;
+import java.net.URI;
+import java.net.http.HttpClient;
+import java.net.http.HttpRequest;
+import java.net.http.HttpResponse;
+import java.nio.charset.StandardCharsets;
 import java.util.Base64;
+
 public class SpotifyAuthenticator {
-    private static final String CLIENT_ID = "acf4183c24a3497dbacebe6795f92812";
-    private static final String CLIENT_SECRET = "19a947ca40324be7b904e222bddf479e";
+    private static final String CLIENT_ID = "your_client_id";
+    private static final String CLIENT_SECRET = "your_client_secret";
     private static final String AUTH_URL = "https://accounts.spotify.com/api/token";
 
-    public static String getAccessToken() throws IOException {
+    private Gson gson = new Gson();
+
+    public static String getAccessToken() throws IOException, InterruptedException {
         String authString = CLIENT_ID + ":" + CLIENT_SECRET;
-        String encodedAuthString = Base64.getEncoder().encodeToString(authString.getBytes());
+        String encodedAuthString = Base64.getEncoder().encodeToString(authString.getBytes(StandardCharsets.UTF_8));
 
-        URL url = new URL(AUTH_URL);
-        HttpURLConnection connection = (HttpURLConnection) url.openConnection();
-        connection.setRequestMethod("POST");
-        connection.setRequestProperty("Authorization", "Basic " + encodedAuthString);
-        connection.setRequestProperty("Content-Type", "application/x-www-form-urlencoded");
-        connection.setDoOutput(true);
+        HttpClient client = HttpClient.newHttpClient();
+        HttpRequest request = HttpRequest.newBuilder()
+                .uri(URI.create(AUTH_URL))
+                .header("Authorization", "Basic " + encodedAuthString)
+                .header("Content-Type", "application/x-www-form-urlencoded")
+                .POST(HttpRequest.BodyPublishers.ofString("grant_type=client_credentials"))
+                .build();
 
-        String requestBody = "grant_type=client_credentials";
-        connection.getOutputStream().write(requestBody.getBytes());
+        HttpResponse<String> response = client.send(request, HttpResponse.BodyHandlers.ofString());
 
-        int responseCode = connection.getResponseCode();
-        if (responseCode == HttpURLConnection.HTTP_OK) {
-            BufferedReader in = new BufferedReader(new InputStreamReader(connection.getInputStream()));
-            String response = in.readLine();
-            in.close();
-            return response.split("\"access_token\":\"")[1].split("\"")[0];
+        int statusCode = response.statusCode();
+        if (statusCode == 200) {
+            JsonObject jsonResponse = JsonParser.parseString(response.body()).getAsJsonObject();
+            return jsonResponse.get("access_token").getAsString();
         } else {
-            throw new IOException("Failed to obtain access token. Response code: " + responseCode);
+            throw new IOException("Failed to obtain access token. Response code: " + statusCode);
         }
     }
 }
